Extensions: Navigate to default chrome page on extension unload

Currently, when an extension is unloaded, Chrome closes all tabs
associated with the extensions content. If the extension overrode a
Chrome page (namely NTP, bookmarks, history), Chrome would not close
that tab and instead refresh/navigate to the default Chrome page.

However, when there is only one tab in the browser; the tab contains
extension related content; and the tab is not a Chrome page override,
Chrome would close the tab, which thereby closes the browser window.

In such case, Chrome should not close the tab, but instead navigate to
the default NTP chrome page.

Bug: 794472
Change-Id: I5a3438817ad7f442fdd534efe481e35dd7b36a4a
Reviewed-on: https://chromium-review.googlesource.com/862183
Commit-Queue: catmullings <catmullings@chromium.org>
Reviewed-by: catmullings <catmullings@chromium.org>
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#530015}
Former-commit-id: 4d546d6ecc0e621a0d08f804a9e25c4427055740